fixed horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box !important;
+  overflow-x: hidden !important;
 }
 
 body {
